--- a/index.html
+++ b/index.html
@@ -118,30 +118,38 @@
                             collaborative environment, providing the...</p>
                     </div>
                     <div class="story-details-2 story-cart"  >
-                        <img class="story-img-1" src="assets/story-2.png" alt="">
-                        <button class="story-btn primary-btn" >November 19, 2019</button>
-                        <h1 class="story-title" >Summer math & literacy
-                            centres for kids</h1>
+                        <div class="gap" >
+                            <img class="story-img-1" src="assets/story-2.png" alt="">
+                            <button class="story-btn primary-btn" >November 19, 2019</button>
+                            <h1 class="story-title" >Summer math & literacy
+                                centres for kids</h1>
+                            </div>
+                                <div class="story-details-3 story-cart"  >
+                                    <img class="story-img-1" src="assets/story-3.png" alt="">
+                                    <button class="story-btn primary-btn" >November 19, 2019</button>
+                                    <h1 class="story-title" >Summer math & literacy
+                                 centres for kids</h1>
                     </div>
-                    <div class="story-details-3 story-cart"  >
-                        <img class="story-img-1" src="assets/story-3.png" alt="">
-                        <button class="story-btn primary-btn" >November 19, 2019</button>
-                        <h1 class="story-title" >Summer math & literacy
-                            centres for kids</h1>
                     </div>
+
                     <div>
                         <div class="story-details-4 story-cart"  >
-                            <img class="story-img-1" src="assets/story-4.png" alt="">
-                            <button class="story-btn primary-btn" >November 19, 2019</button>
-                            <h1 class="story-title" >Summer math & literacy
-                                centres for kids</h1>
+                            <div class="gap" >
+                                <img class="story-img-1" src="assets/story-4.png" alt="">
+                                <button class="story-btn primary-btn" >November 19, 2019</button>
+                                <h1 class="story-title" >Summer math & literacy
+                                    centres for kids</h1>
+                            </div>
+                            <div>
+                                <div class="story-details-5 story-cart"  >
+                                    <img class="story-img-1" src="assets/story-5.png" alt="">
+                                    <button class="story-btn primary-btn" >November 19, 2019</button>
+                                    <h1 class="story-title" >Summer math & literacy
+                                        centres for kids</h1>
+                                </div>
+                            </div>
                         </div>
-                        <div class="story-details-5 story-cart"  >
-                            <img class="story-img-1" src="assets/story-5.png" alt="">
-                            <button class="story-btn primary-btn" >November 19, 2019</button>
-                            <h1 class="story-title" >Summer math & literacy
-                                centres for kids</h1>
-                        </div>
+
                     </div>
                 </div>
             </div>
